--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 body{
     margin: 0;
     padding: 0;
+    font-family: 'Poppins', sans-serif;
 }
 
 .container{
     display: flex;
     margin-bottom: 3%;
+    margin-top: 2%;
 }
 
 .half_width{
@@ -14,7 +16,7 @@ body{
     margin-right: 2%
 }
 
-.half_width h1{
+.heading_one{
     font-size: 60px;
 }
 
@@ -64,14 +66,79 @@ body{
 }
 
 .card{
-    width: 60%;
+    width: 55%;
+    height: 600px;
     padding: 15px;
     margin: auto;
     box-shadow: 10px 10px 40px gray;
     border-radius: 10px;
 }
 
+.card h3{
+    font-weight: bolder;
+    font-size: 25px;
+}
+
 .card img{
     width: 100%;
     border-radius: 5%;
+}
+
+footer{
+    width: 100%;
+    height: 150px;
+    background-color: #00001a;
+    text-align: center;
+    color: white;
+    padding: 20px;
+}
+
+footer p{
+    margin-bottom: 10px;
+}
+
+.one_third h1{
+    text-align: center;
+}
+
+.showoff p{
+    text-align: center;
+}
+
+.newsteller{
+    margin: auto;
+    text-align: center;
+}
+
+.showoff input{
+    padding: 10px;
+    height: 30px;
+    width: 300px;
+    margin-bottom: 100px;
+    border-radius: 10px;
+}
+
+.showoff{
+    background-image: url(images/bg1.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.feedback .heading_two{
+    text-align: center;
+}
+
+.feedback img{
+    height: 200px;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    border: 5px solid lightblue;
+    border-radius: 50%;
+}
+
+.feedback .card{
+    height: 400px;
+    border-left: 5px solid #0099ff;
 }
