--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ footer p{
 
 .showoff{
     background-image: url(images/bg1.png);
-    background-size: cover;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
 }
 
